# musicalbasics

./: .gitignore  Cargo.toml  README.md  app.js  config.js  config.json  package-lock.json
commands/: add.js  eval.js  help.js  ping.js  play.js  purge.js  reload.js
events/: error.js  message.js  ready.js
modules/: Logger.js  functions.js
rework/: package-lock.json  package.json  run.js
rework/src/: app.js
rework/src/modules/: handler.js
rework/src/util/: handler.js  someVars.js
rework/src/util/logEv/: msgDelete.js
src/: consts.rs  main.rs
stable/: app.js  package-lock.json
stable/commands/: mylevel.js  reload.js  userinfo.js
stable/events/: message.js
stable/modules/: functions.js
