[package]
name = "musicalbasics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.5", features = ["framework", "standard_framework"] }
tokio = { version = "1.24.1", features = ["rt-multi-thread"] }
